# slam_and_shape_estimation_for_soft_robots

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
RAL-files/: 12_180.csv  12_360.csv  12_720.csv  24_180.csv  24_360.csv  24_360_2.csv  24_720.csv  48_180.csv  48_360.csv  48_720.csv
bags/maze4/2021-11-23_22h04/: 2021-11-23 22h58.csv
bags/maze4/2021-11-23_22h39/: 2021-11-23 22h37.csv  data.csv
bags/maze4/2021-11-24_14h26/: data.csv
bags/maze4/2021-11-24_15h15/: data.csv
bash/: simulated.sh  slam.sh
config/: config.yml
docker/: Dockerfile  config.bash  docker-compose.yml  ros_entrypoint.sh
launch/: gmapping.launch  point_cloud_to_laserscan.launch  rosbag_replay_set_init.launch  rosbag_replay_slam.launch  slam_from_simulated_csv.launch  transforms_replay.launch
map/: map_generator.py
map/slam/: map4_3.yaml  map4_4.yaml  map4_5.yaml
params/: dual_ekf_navsat_example.yaml  odom_ekf_template.yaml
rviz/: config_file.rviz  map_test_config.rviz
scripts/: analyt_shape_broadcaster.py  csv_saver.py  imu_frame_conversion.py  initial_pose_from_apriltags.py  odometry2.py  pc_frame_transform.py  pcl_feature_ext.py  point_cloud2_broadcaster_replay.py  simulated_apriltag_broadcaster.py  simulated_robot_tcp.py
srv/: PointCloud2Request.srv
