<?xml version="1.0"?>
<package format="2">
    <name>slam_and_shape_estimation_for_soft_robots</name>
    <version>1.0.0</version>
    <description>The slam_and_shape_estimation_for_soft_robots package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="aminkarimi373@gmail.com">Amin173</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>gmapping</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>time</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>
    <depend>robot_localization</depend>
    <depend>turtlesim</depend>
    <depend>pcl_ros</depend>
    <depend>map_server</depend>
    <depend>pointcloud_to_laserscan</depend>
    <build_depend>libpcl-all-dev</build_depend>
<!--    <exec_depend>libpcl-all</exec_depend>-->

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
